--- a/Sjuklöner/Views/Shared/_Layout.cshtml
+++ b/Sjuklöner/Views/Shared/_Layout.cshtml
@@ -82,13 +82,13 @@
             </div>
             <div class="black-bar navbar-collapse collapse">
                 <div class="black-bar-filler" style="width:75%; margin-left: auto; margin-right: auto; float: none;">
-                    <ul style="padding-left:4px;">
-                        <li>@Html.ActionLink("Kollektivavtal", "Index", "CollectiveAgreements", null, new { @class = "navbar-actionlink li-a-no-padding-left" })</li>
-                        <li>@Html.ActionLink("Handläggare", "IndexAdmOff", "Account", null, new { @class = "navbar-actionlink li-a-no-padding-left" })</li>
-                        <li>@Html.ActionLink("Ansökningar", "Index", "Claims", null, new { @class = "navbar-actionlink li-a-no-padding-left" })</li>
-                        <li>@Html.ActionLink("Bolagsuppgifter", "Index", "CareCompanies", null, new { @class = "navbar-actionlink li-a-no-padding-left" })</li>
-                        <li>@Html.ActionLink("Assistenter", "IndexAllCompanies", "Assistants", null, new { @class = "navbar-actionlink li-a-no-padding-left" })</li>
-                        <li>@Html.ActionLink("Ombud", "IndexAllOmbuds", "Account", null, new { @class = "navbar-actionlink li-a-no-padding-left" })</li>
+                    <ul style="padding-left:0px;">
+                        <li>@Html.ActionLink("Kollektivavtal", "Index", "CollectiveAgreements", null, new { @class = "navbar-actionlink li-a-no-padding-left-less-padding-right" })</li>
+                        <li>@Html.ActionLink("Handläggare", "IndexAdmOff", "Account", null, new { @class = "navbar-actionlink li-a-no-padding-left-less-padding-right" })</li>
+                        <li>@Html.ActionLink("Ansökningar", "Index", "Claims", null, new { @class = "navbar-actionlink li-a-no-padding-left-less-padding-right" })</li>
+                        <li>@Html.ActionLink("Bolagsuppgifter", "Index", "CareCompanies", null, new { @class = "navbar-actionlink li-a-no-padding-left-less-padding-right" })</li>
+                        <li>@Html.ActionLink("Assistenter", "IndexAllCompanies", "Assistants", null, new { @class = "navbar-actionlink li-a-no-padding-left-less-padding-right" })</li>
+                        <li>@Html.ActionLink("Ombud", "IndexAllOmbuds", "Account", null, new { @class = "navbar-actionlink li-a-no-padding-left-less-padding-right" })</li>
                     </ul>
                     @Html.Partial("_LoginPartial")
                 </div>
@@ -110,7 +110,7 @@
                     @*@Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })*@
                 </div>
             </div>
-            <div class="blue-bar">
+            <div class="blue-bar navbar-collapse collapse">
                 <div class="blue-bar-filler">
                 </div>
                 <ul>
@@ -119,7 +119,7 @@
                     @*<li>@Html.ActionLink("Assistenter", "Index", "Assistants", new { @class = "navbar-actionlink" })</li>
                         <li>@Html.ActionLink("Assistansbolag", "Edit", "OmbudProfiles", new { @class = "navbar-actionlink" })</li>*@
                 </ul>
-                @*@Html.Partial("_LoginPartial")*@
+                @*Html.Partial("_LoginPartial")*@
                 @*</div>*@
 
             </div>
