Bug fix in Update of Ombuds

--- a/Sjuklöner/Views/CareCompanies/DetailsOmbud.cshtml
+++ b/Sjuklöner/Views/CareCompanies/DetailsOmbud.cshtml
@@ -66,7 +66,8 @@
 {
     <div class="row">
         <div class="col col-md-offset-2 col-md-1 col-no-left-padding">
-            @Html.ActionLink("Tillbaka", "IndexOmbud", null, new { @class = "btn btn-primary btn-primary-small" })
+            @Html.ActionLink("Tillbaka", "Index", null, new { @class = "btn btn-primary btn-primary-small" })
+            @*Html.ActionLink("Tillbaka", "Index", null, new { @class = "btn btn-primary btn-primary-small" })*@
         </div>
     </div>
 }
@@ -74,7 +75,8 @@
 {
     <div class="row">
         <div class="col col-md-offset-2 col-md-1 col-no-left-padding">
-            @Html.ActionLink("Tillbaka", "IndexAllOmbuds", "Account", new { @class = "btn btn-primary btn-primary-small" }, null)
+            @Html.ActionLink("Tillbaka", "IndexAllOmbuds", "Account", null, new { @class = "btn btn-primary btn-primary-small" })         
+            @*Html.ActionLink("Tillbaka", "IndexAllOmbuds", "Account", new { @class = "btn btn-primary btn-primary-small" }, null)*@
         </div>
     </div>
 }
