Implemented Delete Ombud

--- a/Sjuklöner/Views/Account/IndexAllOmbuds.cshtml
+++ b/Sjuklöner/Views/Account/IndexAllOmbuds.cshtml
@@ -72,7 +72,7 @@ else
                         @*@Html.ActionLink("Uppdatera", "EditOmbud", new { id = item.Id }) |*@
                         @Html.ActionLink("Uppdatera", "EditOmbud", "CareCompanies", new { id = item.Id }, null) |
                         @Html.ActionLink("Detaljer", "DetailsOmbud", "CareCompanies", new { id = item.Id }, null) |
-                        @Html.ActionLink("Ta bort", "Delete", new { id = item.Id })
+                        @Html.ActionLink("Ta bort", "DeleteOmbud", new { id = item.Id })
                     </td>
                 </tr>
             }
