--- a/Sjuklöner/Views/Account/IndexAdmOff.cshtml
+++ b/Sjuklöner/Views/Account/IndexAdmOff.cshtml
@@ -5,10 +5,6 @@
 <div class="row">
     <p class="page-header5 col col-md-12">Handläggarlista</p>
 </div>
-@for (int i = 0; i < Model.AdmOffForVMList.Count(); i++)
-{
-    @Html.HiddenFor(model => model.AdmOffForVMList[i].Id)
-}
 <br />
 <div class="row">
     <div class="col col-md-1">
@@ -16,10 +12,21 @@
     </div>
 </div>
 <br />
-<hr class="claim-divider" />
-<br />
-@if (Model.AdmOffsExist)
+@if (!Model.AdmOffsExist)
 {
+    <div class="left-margin-23 display-large-font">
+        Det finns inga handläggare.
+    </div>
+    <br />
+}
+else
+{
+    for (int i = 0; i < Model.AdmOffForVMList.Count(); i++)
+    {
+        @Html.HiddenFor(model => model.AdmOffForVMList[i].Id)
+    }
+    <hr class="claim-divider" />
+    <br />
     <table class="table">
         <tr>
             <th>
@@ -65,12 +72,6 @@
             </tr>
         }
     </table>
-}
-else
-{
-    <div class="left-margin-23 font-size-16">
-        Det finns inga handläggare.
-    </div>
 }
 <div class="row row-padding2">
     <div class="col-left-margin-6 col col-md-2">
