Improved Search functions for Claims

--- a/Sjuklöner/Views/Claims/IndexPageAdmOff.cshtml
+++ b/Sjuklöner/Views/Claims/IndexPageAdmOff.cshtml
@@ -12,6 +12,8 @@
                 <option value="Referensnummer">Referensnummer</option>
                 <option value="CSSN">Kundens Personnummer</option>
                 <option value="ASSN">Assistentens Personnummer</option>
+                <option value="Ombud">Ombudets Efternamn</option>
+                <option value="Bolag">Asistansbolagets Namn</option>
             </select>
             <input type="text" name="searchString" id="searchString" class="input-height col-md-2 input-sm align-bottom5" />
             <div class="col col-md-1 col-no-left-padding col-no-right-padding">
