A changed heading in Index Pages of Claims

--- a/Sjuklöner/Views/Claims/IndexPageAdmOff.cshtml
+++ b/Sjuklöner/Views/Claims/IndexPageAdmOff.cshtml
@@ -116,7 +116,7 @@
     <div class="row">
         <div class="col">
             <div class="second-page-header">
-                Under bearbetning
+                Överförda till Procapita
             </div>
             @if (Model.UnderReviewClaims?.Count() > 0)
             {
@@ -195,7 +195,7 @@
             else
             {
                 <div class="left-margin-23 font-size-16">
-                    Det finns inga ansökningar under bearbetning.
+                    Det finns inga ansökningar som är överförda till Procapita. 
                 </div>
                 <br />
             }
