--- a/Sjuklöner/Views/Claims/IndexPageAdmOff.cshtml
+++ b/Sjuklöner/Views/Claims/IndexPageAdmOff.cshtml
@@ -41,7 +41,7 @@
                         <th class="small-col">
                             Assistansbolag
                         </th>
-                        <th class="small-col">
+                        @*<th class="small-col">
                             Assistentens personnummer
                         </th>
                         <th class="small-col">
@@ -59,7 +59,7 @@
                         <th class="medium-col">
                             Yrkat belopp (Kr)
                         </th>
-                        @*<th></th>*@
+                        <th></th>*@
                     </tr>
 
                     @foreach (var item in Model.InInboxClaims)
@@ -74,7 +74,7 @@
                             <td>
                                 @Html.DisplayFor(modelItem => item.CompanyName)
                             </td>
-                            <td>
+                            @*<td>
                                 @Html.DisplayFor(modelItem => item.RegAssistantSSN)
                             </td>
                             <td>
