--- a/Sjuklöner/Views/Claims/IndexPageAdmin.cshtml
+++ b/Sjuklöner/Views/Claims/IndexPageAdmin.cshtml
@@ -41,66 +41,66 @@
                         <th class="small-col">
                             Assistansbolag
                         </th>
-                        <th class="small-col">
-                            Assistentens personnummer
-                        </th>
-                        <th class="small-col">
-                            Kundens personnummer
-                        </th>
-                        <th class="small-col">
-                            Första sjukdag
-                        </th>
-                        <th class="small-col">
-                            Sista sjukdag
-                        </th>
-                        <th class="small-col">
-                            Antal sjukdagar
-                        </th>
-                        <th class="medium-col">
-                            Yrkat belopp (Kr)
-                        </th>
-                        <th></th>
-                    </tr>
+                        @*<th class="small-col">
+            Assistentens personnummer
+        </th>
+        <th class="small-col">
+            Kundens personnummer
+        </th>
+        <th class="small-col">
+            Första sjukdag
+        </th>
+        <th class="small-col">
+            Sista sjukdag
+        </th>
+        <th class="small-col">
+            Antal sjukdagar
+        </th>
+        <th class="medium-col">
+            Yrkat belopp (Kr)
+        </th> *@
+       <th></th>
+        </tr>
 
-                    @foreach (var item in Model.InInboxClaims)
-                    {
-                        <tr>
-                            <td>
-                                @Html.ActionLink(item.ReferenceNumber, "Recommend", "Claims", new { id = item.Id }, new { @class = "btn btn-primary btn-primary-small" })
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.StatusDate)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.CompanyName)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.RegAssistantSSN)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.CustomerSSN)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.QualifyingDate)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.NumberOfSickDays)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.ClaimedSum)
-                            </td>
-                            <td>
-                                @Html.ActionLink("Ta bort", "Delete", new { id = item.Id }, new { @class = "btn btn-danger btn-danger-small" })
-                            </td>
-                            @*<td>
-                                 @Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |
-                                 @Html.ActionLink("Detaljer", "Details", new { id = item.Id }) |
-                                 @Html.ActionLink("Ta bort", "Delete", new { id = item.Id })
-                                </td>*@
-                        </tr>
+        @foreach (var item in Model.InInboxClaims)
+        {
+            <tr>
+                <td>
+                    @Html.ActionLink(item.ReferenceNumber, "Recommend", "Claims", new { id = item.Id }, new { @class = "btn btn-primary btn-primary-small" })
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.StatusDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CompanyName)
+                </td>
+                @*<td>
+                        @Html.DisplayFor(modelItem => item.RegAssistantSSN)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.CustomerSSN)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.QualifyingDate)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.NumberOfSickDays)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ClaimedSum)
+                    </td>
+                    @*<td>
+                            @Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |
+                            @Html.ActionLink("Detaljer", "Details", new { id = item.Id })
+                            @Html.ActionLink("Ta bort", "Delete", new { id = item.Id })
+                        </td>*@
+                        <td>
+                            @Html.ActionLink("Ta bort", "Delete", new { id = item.Id }, new { @class = "btn btn-danger btn-danger-small" })
+                        </td>
+                    </tr>
                     }
 
                 </table>
@@ -201,7 +201,7 @@
             else
             {
                 <div class="left-margin-23 font-size-16">
-                    Det finns inga ansökningar som är överförda till Procapita. 
+                    Det finns inga ansökningar som är överförda till Procapita.
                 </div>
                 <br />
             }
@@ -312,8 +312,8 @@
             }
         </div>
     </div>
-    
-    <hr class="claim-divider" />   
+
+    <hr class="claim-divider" />
 
 </body>
 
