Added properties in claim.cs for claim transfer timestamps and related logic. Will still be further developed in sync with the robot.

--- a/Sjuklöner/Views/Claims/Recommend.cshtml
+++ b/Sjuklöner/Views/Claims/Recommend.cshtml
@@ -379,7 +379,7 @@
 
     <div class="row">
         <div class="col col-md-offset-4">
-            @Html.ActionLink("För över till Procapita", "IndexPageAdmOff", null, new { @class = "btn btn-primary btn-primary-wide2" })
+            @Html.ActionLink("För över till Procapita", "Transfer", new { refNumber = Model.ClaimNumber }, new { @class = "btn btn-primary btn-primary-wide2" })
         </div>
     </div>
 
