Removing column 'Antal sjukdagar' from all Index Views for Claims

--- a/Sjuklöner/Views/Claims/IndexPageAdmOff.cshtml
+++ b/Sjuklöner/Views/Claims/IndexPageAdmOff.cshtml
@@ -154,9 +154,9 @@
                         <th class="small-col">
                             Sista sjukdag
                         </th>
-                        <th class="small-col">
+                        @*<th class="small-col">
                             Antal sjukdagar
-                        </th>
+                        </th>*@
                         <th class="medium-col">
                             Yrkat belopp (Kr)
                         </th>
@@ -190,9 +190,9 @@
                         <td>
                             @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
                         </td>
-                        <td>
+                        @*<td>
                             @Html.DisplayFor(modelItem => item.NumberOfSickDays)
-                        </td>
+                        </td>*@
                         <td>
                             @Html.DisplayFor(modelItem => item.ClaimedSum)
                         </td>
@@ -250,9 +250,9 @@
                         <th class="small-col">
                             Sista sjukdag
                         </th>
-                        <th class="small-col">
+                        @*<th class="small-col">
                             Antal sjukdagar
-                        </th>
+                        </th>*@
                         <th class="medium-col">
                             Yrkat belopp (Kr)
                         </th>
@@ -292,9 +292,9 @@
                         <td>
                             @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
                         </td>
-                        <td>
+                        @*<td>
                             @Html.DisplayFor(modelItem => item.NumberOfSickDays)
-                        </td>
+                        </td>*@
                         <td>
                             @Html.DisplayFor(modelItem => item.ClaimedSum)
                         </td>
