--- a/Sjuklöner/Views/Claims/IndexPageOmbud.cshtml
+++ b/Sjuklöner/Views/Claims/IndexPageOmbud.cshtml
@@ -154,9 +154,9 @@
                         <th class="ssmall-col-ombud">
                             Sista sjukdag
                         </th>
-                        <th class="ssmall-col-ombud">
+                        @*<th class="ssmall-col-ombud">
                             Antal sjukdagar
-                        </th>
+                        </th>*@
                         <th class="medium-col">
                             Yrkat belopp (Kr)
                         </th>
@@ -187,9 +187,9 @@
                         <td>
                             @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
                         </td>
-                        <td>
+                        @*<td>
                             @Html.DisplayFor(modelItem => item.NumberOfSickDays)
-                        </td>
+                        </td>*@
                         <td>
                             @Html.DisplayFor(modelItem => item.ClaimedSum)
                         </td>
