--- a/Sjuklöner/Views/Claims/IndexPageAdmin.cshtml
+++ b/Sjuklöner/Views/Claims/IndexPageAdmin.cshtml
@@ -156,9 +156,9 @@
                         <th class="small-col">
                             Sista sjukdag
                         </th>
-                        <th class="small-col">
+                        @*<th class="small-col">
                             Antal sjukdagar
-                        </th>
+                        </th>*@
                         <th class="medium-col">
                             Yrkat belopp (Kr)
                         </th>
@@ -192,9 +192,9 @@
                             <td>
                                 @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
                             </td>
-                            <td>
+                            @*<td>
                                 @Html.DisplayFor(modelItem => item.NumberOfSickDays)
-                            </td>
+                            </td>*@
                             <td>
                                 @Html.DisplayFor(modelItem => item.ClaimedSum)
                             </td>
@@ -255,9 +255,9 @@
                         <th class="small-col">
                             Sista sjukdag
                         </th>
-                        <th class="small-col">
+                        @*<th class="small-col">
                             Antal sjukdagar
-                        </th>
+                        </th>*@
                         <th class="medium-col">
                             Yrkat belopp (Kr)
                         </th>
@@ -297,9 +297,9 @@
                             <td>
                                 @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
                             </td>
-                            <td>
+                            @*<td>
                                 @Html.DisplayFor(modelItem => item.NumberOfSickDays)
-                            </td>
+                            </td>*@
                             <td>
                                 @Html.DisplayFor(modelItem => item.ClaimedSum)
                             </td>
