--- a/Sjuklöner/Views/Claims/_ClaimForOmbud.cshtml
+++ b/Sjuklöner/Views/Claims/_ClaimForOmbud.cshtml
@@ -866,10 +866,10 @@
                     <div class="col col-md-5">
                         <div class="form-group line-height-12">
                             <div class="row label-padding">
-                                @*@Html.LabelFor(model => model.PensionAndInsurance, htmlAttributes: new { @class = "control-label-left-align2 col-md-12" })*@
+                                @Html.LabelFor(model => model.RejectReason, htmlAttributes: new { @class = "control-label-left-align2 col-md-12" })
                             </div>
                             <div class="row display-padding6">
-                                @*@Html.DisplayFor(m => m.PensionAndInsurance)*@
+                                @Html.DisplayFor(m => m.RejectReason)
                             </div>
                         </div>
                     </div>
